--- a/src/Model/XGBoost/XGBoost climate anomaly.ipynb
+++ b/src/Model/XGBoost/XGBoost climate anomaly.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ea74014b",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"C:/Users/A Esther Graceia/climate_anomalies_dataset.csv\")\n",
+    "df = pd.read_csv(\"C:/climate_anomalies_dataset.csv\")\n",
     "display(df.head())"
    ]
   },
